--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.data.mongodb.uri = ${MONGODB_URI:mongodb://localhost/soo}
 security.jwt.tokenExpirationTime = 60
-security.jwt.tokenSigningKey = security
+security.jwt.tokenSigningKey = ${SECRET_KEY:security}
+management.security.enabled = false
