Removed token expiration.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.data.mongodb.uri = ${MONGODB_URI:mongodb://localhost/soo}
+spring.data.mongodb.uri = mongodb://sooserver:arbulon@ds060749.mlab.com:60749/soodb
 security.jwt.tokenExpirationTime = 60
 security.jwt.tokenSigningKey = ${SECRET_KEY:security}
 management.security.enabled = false
